added filter_df and implemented display_df function'

--- a/Chaining search.ipynb
+++ b/Chaining search.ipynb
@@ -24,17 +24,40 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-01-22T14:39:41.904717Z",
+     "start_time": "2019-01-22T14:39:41.899150Z"
+    }
+   },
    "outputs": [],
-   "source": []
+   "source": [
+    "'''\n",
+    "Args:\n",
+    "    df: Pandas DataFrame to filter on\n",
+    "    df: column on which we filter\n",
+    "    method: \"regex\" of \"isin\"\n",
+    "    regex_or_set: Regular expression (if method==\"regex\") or set (if method==\"isin\")\n",
+    "'''\n",
+    "\n",
+    "def filter_df(df, column, method, regex_or_set):\n",
+    "    if method==\"regex\":\n",
+    "        filter_condition = df[column].str.contains(regex_or_set)\n",
+    "    elif method==\"isin\":\n",
+    "        filter_condition = df[column].isin(regex_or_set)\n",
+    "    else:\n",
+    "        raise ValueError(\"method should be one of regex or isin\")\n",
+    "    return df[filter_condition]\n",
+    "    "
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-16T16:42:06.788517Z",
-     "start_time": "2019-01-16T16:42:06.541144Z"
+     "end_time": "2019-01-22T14:35:31.937772Z",
+     "start_time": "2019-01-22T14:35:31.893616Z"
     }
    },
    "outputs": [],
@@ -44,7 +67,7 @@
     "import xml.etree.ElementTree as ET\n",
     "import json\n",
     "import urllib\n",
-    "import wx   # for interaction popups          TODO -> omzetten naar JS of zo\n",
+    "#import wx   # for interaction popups          TODO -> omzetten naar JS of zo\n",
     "import itertools # for frequency list function\n",
     "import numpy     # idem\n",
     "from IPython.display import FileLink, FileLinks\n",
@@ -70,8 +93,8 @@
     "\n",
     "def search_corpus(query, corpus, start_position=1):\n",
     "    # show wait indicator\n",
-    "    app = wx.App()\n",
-    "    msg_to_user = wx.BusyInfo('Searching '+corpus+' corpus')\n",
+    "    #app = wx.App()\n",
+    "    #msg_to_user = wx.BusyInfo('Searching '+corpus+' corpus')\n",
     "    if corpus not in AVAILABLE_CORPORA:\n",
     "        raise ValueError(\"Unknown corpus: \" + corpus)\n",
     "    try:\n",
@@ -90,9 +113,9 @@
     "        return df\n",
     "    except Exception as e:\n",
     "        raise ValueError(\"An error occured when searching corpus \" + corpus + \": \"+ str(e))\n",
-    "    finally:\n",
-    "        # remove wait indicator, and return dataframe\n",
-    "        del msg_to_user        \n",
+    "    #finally:\n",
+    "    #    # remove wait indicator, and return dataframe\n",
+    "    #    del msg_to_user        \n",
     "\n",
     "def search_corpus_multiple(queries, corpus):\n",
     "    result_dict = {}\n",
@@ -101,14 +124,14 @@
     "    return result_dict\n",
     "   \n",
     "\n",
-    "def search_lexicon_alllemmata(lexicon, pos):\n",
-    "    query = lexicon_query_alllemmata(lexicon, pos)\n",
+    "def search_lexicon_alllemmata(lexicon):\n",
+    "    query = lexicon_query_alllemmata(lexicon, pos=None)\n",
     "    return search_lexicon(query, lexicon)\n",
     "\n",
     "def search_lexicon(query, lexicon):\n",
     "     # show wait indicator, so the user knows what's happening\n",
-    "    app = wx.App()\n",
-    "    msg_to_user = wx.BusyInfo('Searching '+lexicon+' lexicon')\n",
+    "    #app = wx.App()\n",
+    "    #msg_to_user = wx.BusyInfo('Searching '+lexicon+' lexicon')\n",
     "    # default endpoint, except when diamant is invoked\n",
     "    endpoint = \"http://172.16.4.56:8890/sparql\"\n",
     "    if (lexicon==\"diamant\"):\n",
@@ -130,9 +153,9 @@
     "        return df\n",
     "    except Exception as e:\n",
     "        raise ValueError(\"An error occured when searching lexicon \" + lexicon + \": \"+ str(e))\n",
-    "    finally:\n",
-    "        # remove wait indicator, \n",
-    "        del msg_to_user\n",
+    "    #finally:\n",
+    "    #    # remove wait indicator, \n",
+    "    #    del msg_to_user\n",
     "        \n",
     "\n",
     "# Processing methods\n",
@@ -311,8 +334,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-16T16:42:06.810560Z",
-     "start_time": "2019-01-16T16:42:06.790502Z"
+     "end_time": "2019-01-22T15:54:30.161099Z",
+     "start_time": "2019-01-22T15:54:30.147834Z"
     }
    },
    "outputs": [],
@@ -431,14 +454,24 @@
     "    except Exception as e:\n",
     "        raise ValueError(\"An error occured when loading \" + filepath + \": \"+ str(e))\n",
     "    finally:\n",
-    "        return df"
+    "        return df\n",
+    "\n",
+    "def display_df(df, columns=None, title=None):\n",
+    "    if title is not None:\n",
+    "        display(HTML(\"<b>%s</b>\" % title))\n",
+    "    \n",
+    "    if columns is not None:\n",
+    "        df_display=df[columns]\n",
+    "    else:\n",
+    "        df_display = df\n",
+    "    \n",
+    "    display(df)\n",
+    "    create_save_dataframe_ui(df_corpus)"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "heading_collapsed": true
-   },
+   "metadata": {},
    "source": [
     "## Library functions: Queries"
    ]
@@ -448,10 +481,9 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-16T16:42:06.826492Z",
-     "start_time": "2019-01-16T16:42:06.812237Z"
-    },
-    "hidden": true
+     "end_time": "2019-01-22T14:35:34.495485Z",
+     "start_time": "2019-01-22T14:35:34.474233Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -841,8 +873,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-16T16:42:06.847928Z",
-     "start_time": "2019-01-16T16:42:06.828765Z"
+     "end_time": "2019-01-22T14:35:35.930964Z",
+     "start_time": "2019-01-22T14:35:35.909872Z"
     }
    },
    "outputs": [],
@@ -865,8 +897,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-16T16:42:07.402740Z",
-     "start_time": "2019-01-16T16:42:06.849675Z"
+     "end_time": "2019-01-22T15:54:51.993481Z",
+     "start_time": "2019-01-22T15:54:51.497985Z"
     },
     "scrolled": false
    },
@@ -877,25 +909,20 @@
     "corpus = corpusField.value\n",
     "df_corpus = search_corpus(query, corpus)\n",
     "#df_corpus = load_dataframe('mijn_resultaten.csv')\n",
-    "display(df_corpus)\n",
-    "create_save_dataframe_ui(df_corpus)\n",
+    "display_df(df_corpus, title=\"Results:\")\n",
     "\n"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "heading_collapsed": true
-   },
+   "metadata": {},
    "source": [
     "## Lexicon search"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "* Run the cell below to show the UI, and fill in your search query in the UI"
    ]
@@ -905,10 +932,9 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-16T16:42:07.420257Z",
-     "start_time": "2019-01-16T16:42:07.404330Z"
+     "end_time": "2019-01-22T14:35:39.078060Z",
+     "start_time": "2019-01-22T14:35:39.061787Z"
     },
-    "hidden": true,
     "scrolled": true
    },
    "outputs": [],
@@ -919,9 +945,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     " * Click the cell below and press Run to perform the given query"
    ]
@@ -931,10 +955,9 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-16T16:42:07.805919Z",
-     "start_time": "2019-01-16T16:42:07.421680Z"
-    },
-    "hidden": true
+     "end_time": "2019-01-22T14:35:42.147205Z",
+     "start_time": "2019-01-22T14:35:41.791699Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -954,9 +977,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "heading_collapsed": true
-   },
+   "metadata": {},
    "source": [
     "## Case study 1 (parallel): Frequency of *puur*+verb and *zuiver*+verb compared\n",
     "* Below cell searches for *puur*+verb and for *zuiver*+verb in the CHN corpus\n",
@@ -968,10 +989,9 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-16T16:42:08.692517Z",
-     "start_time": "2019-01-16T16:42:07.809209Z"
-    },
-    "hidden": true
+     "end_time": "2019-01-22T14:39:47.933723Z",
+     "start_time": "2019-01-22T14:39:47.043682Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -1013,8 +1033,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-16T16:42:18.713352Z",
-     "start_time": "2019-01-16T16:42:08.694085Z"
+     "end_time": "2019-01-22T14:35:56.234896Z",
+     "start_time": "2019-01-22T14:35:45.746206Z"
     }
    },
    "outputs": [],
@@ -1058,8 +1078,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-16T16:42:24.722526Z",
-     "start_time": "2019-01-16T16:42:18.714869Z"
+     "end_time": "2019-01-22T14:36:56.525588Z",
+     "start_time": "2019-01-22T14:35:56.240217Z"
     }
    },
    "outputs": [],
@@ -1094,8 +1114,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-16T16:42:36.088787Z",
-     "start_time": "2019-01-16T16:42:24.724312Z"
+     "end_time": "2019-01-22T14:53:04.668561Z",
+     "start_time": "2019-01-22T14:52:54.047161Z"
     }
    },
    "outputs": [],
@@ -1115,15 +1135,18 @@
     "\n",
     "# LEXICON: get adjectives having a final -e in definite attributive use\n",
     "print('Filtering lexicon results')\n",
-    "final_e_condition=df_lexicon.wordform.str.contains('e$')\n",
-    "df = df_lexicon[final_e_condition]\n",
-    "display(df)\n",
+    "df_lexicon_form_e = filter_df(df_lexicon,column=\"wordform\",method=\"regex\", regex_or_set = 'e$')\n",
+    "#final_e_condition=df_lexicon.wordform.str.contains('e$')\n",
+    "#df = df_lexicon[final_e_condition]\n",
+    "display(df_lexicon_form_e)\n",
     "\n",
     "# RESULT: get the records out of our first list in which the -e-less-adjectives match the lemma form of our last list\n",
     "print('Wanted list:')\n",
-    "eless_forms = list(df.lemma)\n",
-    "no_final_e_condition = df_corpus['word 1'].isin(eless_forms)\n",
-    "display( df_corpus[no_final_e_condition] )"
+    "e_forms = list(df_lexicon_form_e.lemma)\n",
+    "#no_final_e_condition = df_corpus['word 1'].isin(eless_forms)\n",
+    "#result_df = df_corpus[no_final_e_condition]\n",
+    "result_df = filter_df(df_corpus, column = \"word 1\", method=\"isin\", regex_or_set=e_forms)\n",
+    "display( result_df )"
    ]
   },
   {
@@ -1136,7 +1159,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-01-22T14:33:52.653090Z",
+     "start_time": "2019-01-22T14:33:40.188Z"
+    }
+   },
    "outputs": [],
    "source": [
     "lexicon_to_search=\"molex\"\n",
@@ -1175,7 +1203,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-01-22T14:33:52.653972Z",
+     "start_time": "2019-01-22T14:33:40.190Z"
+    }
+   },
    "outputs": [],
    "source": [
     "base_lexicon=\"anw\"\n",
@@ -1233,7 +1266,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.6.7"
   }
  },
  "nbformat": 4,
