--- a/Chaining search.ipynb
+++ b/Chaining search.ipynb
@@ -23,14 +23,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2019-01-22T14:39:41.904717Z",
      "start_time": "2019-01-22T14:39:41.899150Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "TabError",
+     "evalue": "inconsistent use of tabs and spaces in indentation (<ipython-input-1-6636c85051ed>, line 97)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-1-6636c85051ed>\"\u001b[1;36m, line \u001b[1;32m97\u001b[0m\n\u001b[1;33m    column_names = list(df_corpus.columns.values)\u001b[0m\n\u001b[1;37m                                                 ^\u001b[0m\n\u001b[1;31mTabError\u001b[0m\u001b[1;31m:\u001b[0m inconsistent use of tabs and spaces in indentation\n"
+     ]
+    }
+   ],
    "source": [
     "from nltk.tag.perceptron import PerceptronTagger\n",
     "\n",
@@ -64,7 +73,7 @@
     "        a single Pandas DataFrame \n",
     "        \n",
     "    >>> new_df = concat_df( [dataframe1, dataframe2, dataframe3], ['chn corpus', 'nederlab', 'opensonar'] )\n",
-    "    >>> display(new_df)\n",
+    "    >>> display_df(new_df)\n",
     "    '''\n",
     "    # ref: https://pandas.pydata.org/pandas-docs/stable/user_guide/merging.html\n",
     "    \n",
@@ -88,7 +97,7 @@
     "        a single Pandas DataFrame \n",
     "        \n",
     "    >>> new_df = join_df( [dataframe1, dataframe2] )\n",
-    "    >>> display(new_df)\n",
+    "    >>> display_df(new_df)\n",
     "    '''\n",
     "    \n",
     "    # ref: https://pandas.pydata.org/pandas-docs/stable/user_guide/merging.html\n",
@@ -163,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2019-01-22T14:35:31.937772Z",
@@ -199,7 +208,7 @@
     "        a Pandas DataFrame containing corpus data\n",
     "        \n",
     "    >>> df_corpus = search_corpus_allwords(\"gysseling\")\n",
-    "    >>> display(df_corpus)\n",
+    "    >>> display_df(df_corpus)\n",
     "    '''\n",
     "    \n",
     "    query = r'[word=\".*\"]'\n",
@@ -217,7 +226,7 @@
     "        a Pandas DataFrame containing corpus data\n",
     "        \n",
     "    >>> df_corpus = search_corpus_alllemmata(\"chn\")\n",
-    "    >>> display(df_corpus)\n",
+    "    >>> display_df(df_corpus)\n",
     "    '''\n",
     "    \n",
     "    query = r'[lemma=\".*\"]'\n",
@@ -237,7 +246,7 @@
     "        a Pandas DataFrame containing corpus data\n",
     "        \n",
     "    >>> df_corpus = search_corpus(r'[pos=\"ADJ\"][word=\"huis\"]', \"chn\")\n",
-    "    >>> display(df_corpus)\n",
+    "    >>> display_df(df_corpus)\n",
     "    '''\n",
     "    \n",
     "    # show wait indicator\n",
@@ -294,7 +303,7 @@
     "        a Pandas DataFrame containing lexicon data \n",
     "        \n",
     "    >>> df_corpus = search_corpus_alllemmata(\"chn\")\n",
-    "    >>> display(df_corpus)\n",
+    "    >>> display_df(df_corpus)\n",
     "    '''\n",
     "    query = lexicon_query_alllemmata(lexicon, pos)\n",
     "    return search_lexicon(query, lexicon)\n",
@@ -375,6 +384,11 @@
     "        df: a Pandas DataFrame containing Diamant data\n",
     "    Returns:\n",
     "        a set of lemmata OR a set of synonym definitions\n",
+    "        \n",
+    "    >>> query = lexicon_query(word=search_word, pos= '', lexicon=lexicon)\n",
+    "    >>> df_lexicon = search_lexicon(query, lexicon)\n",
+    "    >>> syns = diamant_get_synonyms(df_lexicon) \n",
+    "    >>> display( 'Synoniemen voor ' + search_word + ': ' + \", \".join(syns)))\n",
     "    '''\n",
     "    \n",
     "    # Depending on the result type, we return the lemma or the definition text\n",
@@ -518,14 +532,18 @@
     "\n",
     "def view_multiple_results(results, labels):\n",
     "    '''\n",
-    "    This function shows the content of multiple Pandas DataFrames out of an dictionary associating\n",
-    "    labels (eg. corpus or lexicon names) to dataframes (values)\n",
+    "    This function shows the content of multiple Pandas DataFrames out of a dictionary associating\n",
+    "    labels (eg. corpus or lexicon names) to dataframes (values). It is typically called\n",
+    "    after search_corpus_multiple(), since this function returns such a dictionary.\n",
     "    \n",
     "    Args:\n",
     "        results: a dictionary of Pandas DataFrames\n",
     "        labels: list of labels corresponding to the Pandas DataFrames in results\n",
     "    Returns:\n",
     "        N/A\n",
+    "        \n",
+    "    >>> result_dict = search_corpus_multiple(queries, corpus)\n",
+    "    >>> view_multiple_results(result_dict, labels=list(syns))\n",
     "    '''\n",
     "    assert len(labels)==len(results)\n",
     "    for n,query in enumerate(results):\n",
@@ -547,6 +565,9 @@
     "        corpus: the corpus to be searched\n",
     "    Returns:\n",
     "        a Pandas DataFrame with raw frequencies ('raw_freq' column) and rankings ('rank' column)\n",
+    "        \n",
+    "    >>> df_frequency_list = get_frequency_list(some_lexicon, \"NOUN\", corpus_to_search)\n",
+    "    >>> display(df_frequency_list)\n",
     "    '''\n",
     "    \n",
     "    # LEXICON: get a lemmata list to work with\n",
@@ -600,8 +621,8 @@
     "        a Pandas DataFrame associating lemmata to their paradigms ('known_wordforms' column) and\n",
     "        missing wordforms found in the corpus ('unknown_wordforms' column).\n",
     "        \n",
-    "        >>> df = get_missing_wordforms(\"molex\", \"VERB\", \"opensonar\")\n",
-    "        >>> df.to_csv( \"missing_wordforms.csv\", index=False)\n",
+    "    >>> df = get_missing_wordforms(\"molex\", \"VERB\", \"opensonar\")\n",
+    "    >>> df.to_csv( \"missing_wordforms.csv\", index=False)\n",
     "    '''\n",
     "    \n",
     "    # LEXICON: get a lemmata list to work with\n",
@@ -709,7 +730,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2019-01-22T15:54:30.161099Z",
@@ -769,8 +790,10 @@
     "    '''\n",
     "    This function builds a GUI for lexicon search.\n",
     "    \n",
+    "    Args:\n",
+    "        N/A\n",
     "    Returns:\n",
-    "    \n",
+    "        N/A\n",
     "    '''\n",
     "    \n",
     "    DEFAULT_SEARCHWORD = 'boek'\n",
@@ -923,7 +946,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 7,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2019-01-22T14:35:34.495485Z",
@@ -936,7 +959,7 @@
     "\n",
     "def containsRegex(word):\n",
     "    '''\n",
-    "    This function check whether some string contains a regular expression or not\n",
+    "    This function checks whether some string contains a regular expression or not\n",
     "    \n",
     "    Args:\n",
     "        word: a string to check for regular expressions\n",
@@ -951,7 +974,7 @@
     "                     \n",
     "def lexicon_query(word, pos, lexicon):\n",
     "    '''\n",
-    "    This function builds a query for getting the paradigm etc. of a given lemma in a given lexicon.\n",
+    "    This function builds a query for getting the paradigm etc. of a given lemma out of a given lexicon.\n",
     "    The resulting query string is to be used as a parameter of search_lexicon() \n",
     "    \n",
     "    Args:\n",
@@ -963,6 +986,10 @@
     "    '''\n",
     "    \n",
     "    if (lexicon==\"anw\"):\n",
+    "        # part-of-speech filter not supported for this lexicon\n",
+    "        if (pos is not None and pos != ''):\n",
+    "            print('Filtering by part-of-speech is not (yet) supported in the \\''+lexicon+'\\' lexicon')\n",
+    "        # exact or fuzzy search\n",
     "        exactsearch = (not containsRegex(word))\n",
     "        subpart = \"\"\"FILTER ( regex(?lemma, \\\"\"\"\"+word+\"\"\"\\\") || regex(?definition, \\\"\"\"\"+word+\"\"\"\\\") ) . \"\"\"\n",
     "        if (exactsearch == True):\n",
@@ -991,6 +1018,10 @@
     "                      \"\"\"+subpart+\"\"\"\n",
     "                      }\"\"\"\n",
     "    elif (lexicon==\"diamant\"):\n",
+    "        # part-of-speech filter not supported for this lexicon\n",
+    "        if (pos is not None and pos != ''):\n",
+    "            print('Filtering by part-of-speech is not (yet) supported in the \\''+lexicon+'\\' lexicon')\n",
+    "        # exact or fuzzy search\n",
     "        exactsearch = (not containsRegex(word))\n",
     "        subpart1 = \"\"\"?n_form ontolex:writtenRep ?n_ontolex_writtenRep . \n",
     "            FILTER regex(?n_ontolex_writtenRep, \\\"\"\"\"+word+\"\"\"\\\") . \"\"\"\n",
@@ -1088,6 +1119,7 @@
     "        }\n",
     "        }\"\"\"\n",
     "    elif (lexicon==\"molex\"):\n",
+    "        # exact or fuzzy search\n",
     "        exactsearch = (not containsRegex(word))\n",
     "        subpart1 = \"\"\"\"\"\"\n",
     "        subpart2 = \"\"\"\"\"\"\n",
@@ -1130,6 +1162,10 @@
     "            }\n",
     "        \"\"\"\n",
     "    elif (lexicon==\"duelme\"):\n",
+    "        # part-of-speech filter not supported for this lexicon\n",
+    "        if (pos is not None and pos != ''):\n",
+    "            print('Filtering by part-of-speech is not (yet) supported in the \\''+lexicon+'\\' lexicon')\n",
+    "        # exact or fuzzy search\n",
     "        exactsearch = (not containsRegex(word))\n",
     "        subpart = \"\"\"FILTER ( regex(?lemma, \\\"\"\"\"+word+\"\"\"\\\") || regex(?wordform, \\\"\"\"\"+word+\"\"\"\\\") ) .\"\"\"\n",
     "        if (exactsearch == True):\n",
@@ -1155,6 +1191,10 @@
     "            }\n",
     "        \"\"\"\n",
     "    elif (lexicon==\"celex\"):\n",
+    "        # part-of-speech filter not supported for this lexicon\n",
+    "        if (pos is not None and pos != ''):\n",
+    "            print('Filtering by part-of-speech is not (yet) supported in the \\''+lexicon+'\\' lexicon')\n",
+    "        # exact or fuzzy search\n",
     "        exactsearch = (not containsRegex(word))\n",
     "        subpart = \"\"\"FILTER ( regex(?lemma, \\\"\"\"\"+word+\"\"\"\\\") ) . \"\"\"\n",
     "        if (exactsearch == True):\n",
@@ -1276,6 +1316,9 @@
     "    '''\n",
     "    \n",
     "    if (lexicon==\"anw\"):\n",
+    "        # part-of-speech filter not supported for this lexicon\n",
+    "        if (pos is not None and pos != ''):\n",
+    "            print('Filtering by part-of-speech is not (yet) supported in the \\''+lexicon+'\\' lexicon')\n",
     "        query = \"\"\"PREFIX ontolex: <http://www.w3.org/ns/lemon/ontolex#>\n",
     "                  PREFIX anw: <http://rdf.ivdnt.org/lexica/anw>                  \n",
     "                  SELECT DISTINCT ?writtenForm\n",
@@ -1287,6 +1330,9 @@
     "                      }\n",
     "                      ORDER BY ?writtenForm\"\"\"\n",
     "    elif (lexicon==\"celex\"):\n",
+    "        # part-of-speech filter not supported for this lexicon\n",
+    "        if (pos is not None and pos != ''):\n",
+    "            print('Filtering by part-of-speech is not (yet) supported in the \\''+lexicon+'\\' lexicon')\n",
     "        query = \"\"\"\n",
     "            PREFIX ontolex: <http://www.w3.org/ns/lemon/ontolex#>\n",
     "            \n",
@@ -1296,6 +1342,9 @@
     "                }\n",
     "            ORDER BY ?lemma\"\"\"\n",
     "    elif (lexicon==\"diamant\"):\n",
+    "        # part-of-speech filter not supported for this lexicon\n",
+    "        if (pos is not None and pos != ''):\n",
+    "            print('Filtering by part-of-speech is not (yet) supported in the \\''+lexicon+'\\' lexicon')\n",
     "        query = \"\"\"\n",
     "        PREFIX xsd: <http://www.w3.org/2001/XMLSchema#>\n",
     "        prefix prov: <http://www.w3.org/ns/prov#>\n",
@@ -1325,6 +1374,9 @@
     "        LIMIT 10000\n",
     "        \"\"\"\n",
     "    elif (lexicon==\"duelme\"):\n",
+    "        # part-of-speech filter not supported for this lexicon\n",
+    "        if (pos is not None and pos != ''):\n",
+    "            print('Filtering by part-of-speech is not (yet) supported in the \\''+lexicon+'\\' lexicon')\n",
     "        query = \"\"\"\n",
     "            PREFIX lmf: <http://www.lexinfo.net/lmf>            \n",
     "            SELECT DISTINCT ?lemma AS ?writtenForm\n",
@@ -1333,8 +1385,9 @@
     "            }\n",
     "            ORDER BY ?lemma\"\"\"\n",
     "    elif (lexicon==\"molex\"):\n",
+    "        # part-of-speech filter\n",
     "        pos_condition = \"\"\"\"\"\"\n",
-    "        if pos is not None:\n",
+    "        if pos is not None and pos != '':\n",
     "            pos_condition = \"\"\"\n",
     "            {?lemEntryId UD:pos ?lemPos .\n",
     "            FILTER regex(?lemPos, '\"\"\"+pos+\"\"\"') } .\n",
@@ -1624,7 +1677,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2019-01-22T14:35:39.078060Z",
@@ -1636,7 +1689,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3043fb63951948949814765e297121a7",
+       "model_id": "04ebdd0b279a4ceea16d35d0bf6ff02d",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1662,7 +1715,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 8,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2019-01-22T14:35:42.147205Z",
