--- a/Chaining search.ipynb
+++ b/Chaining search.ipynb
@@ -23,35 +23,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-22T14:39:41.904717Z",
-     "start_time": "2019-01-22T14:39:41.899150Z"
+     "end_time": "2019-01-30T16:38:05.198471Z",
+     "start_time": "2019-01-30T16:38:04.934207Z"
     }
    },
-   "outputs": [
-    {
-     "ename": "TabError",
-     "evalue": "inconsistent use of tabs and spaces in indentation (<ipython-input-1-6636c85051ed>, line 97)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-1-6636c85051ed>\"\u001b[1;36m, line \u001b[1;32m97\u001b[0m\n\u001b[1;33m    column_names = list(df_corpus.columns.values)\u001b[0m\n\u001b[1;37m                                                 ^\u001b[0m\n\u001b[1;31mTabError\u001b[0m\u001b[1;31m:\u001b[0m inconsistent use of tabs and spaces in indentation\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from nltk.tag.perceptron import PerceptronTagger\n",
     "\n",
-    "'''\n",
-    "Return a Pandas DataFrame filtered according to a set of parameters\n",
-    "Args:\n",
-    "    df: Pandas DataFrame to filter on\n",
-    "    df: column on which we filter\n",
-    "    method: \"regex\" of \"isin\"\n",
-    "    regex_or_set: Regular expression (if method==\"regex\") or set (if method==\"isin\")\n",
-    "'''\n",
     "def filter_df(df, column, method, regex_or_set):\n",
+    "    '''\n",
+    "    Return a Pandas DataFrame filtered according to a set of parameters\n",
+    "    Args:\n",
+    "        df: Pandas DataFrame to filter on\n",
+    "        df: column on which we filter\n",
+    "        method: \"regex\" of \"isin\"\n",
+    "        regex_or_set: Regular expression (if method==\"regex\") or set (if method==\"isin\")\n",
+    "    '''\n",
     "    \n",
     "    if method==\"regex\":\n",
     "        filter_condition = df[column].str.contains(regex_or_set)\n",
@@ -136,47 +127,47 @@
     "    # the tagger expects us to feed it with arrays with length = [number of tokens], as elements of\n",
     "    # one single array holding all sentences arrays (see below).\n",
     "    \n",
-    "\t# So, determine how many layers (lemma, pos, wordform) we have \n",
-    "\tcolumn_names = list(df_corpus.columns.values)\n",
-    "\tfor n, val in enumerate(column_names):\n",
+    "    # So, determine how many layers (lemma, pos, wordform) we have \n",
+    "    column_names = list(df_corpus.columns.values)\n",
+    "    for n, val in enumerate(column_names):\n",
     "        # remove the numbers at the end of the layers names (lemma 1, lemma 2, ..., pos 1, pos 2, ...)\n",
     "        # so we end up with clean layers name only\n",
-    "\t\tcolumn_names[n] = val.split(' ')[0] \n",
-    "\tnumber_of_layers = len(set(column_names))\n",
+    "        column_names[n] = val.split(' ')[0] \n",
+    "    number_of_layers = len(set(column_names))\n",
     "\n",
     "    # Now we can determine the standard length of our corpus sentences: that can be computed \n",
     "    # by dividing the number of columns of the corpus DataFrame by the number of layers\n",
     "    # we just computed.\n",
-    "\tsentences = []\n",
-    "\tnr_of_words_per_sentence = int( df_corpus.shape[1] / number_of_layers )  \n",
+    "    sentences = []\n",
+    "    nr_of_words_per_sentence = int( df_corpus.shape[1] / number_of_layers )  \n",
     "\n",
     "    # Build training data for the tagger in the right format\n",
     "    # The input must be like: [ [('today','NN'),('is','VBZ'),('good','JJ'),('day','NN')], [...] ]\n",
-    "\tfor index, row in df_corpus.iterrows():\n",
-    "\t\tone_sentence =  []\n",
-    "\t\twrong = False\n",
-    "\t\tfor i in range(0, nr_of_words_per_sentence, 1): \n",
-    "\t\t\ttuple = ( row['word '+str(i)], row['pos '+str(i)] )\n",
-    "\t\t\tone_sentence.append( tuple )\n",
-    "\t\t\tif (row['word '+str(i)] is None or row['pos '+str(i)] is None):\n",
-    "\t\t\t\twrong = True\n",
-    "\t\tif wrong is False:\n",
-    "\t\t\tsentences.append(one_sentence)\n",
+    "    for index, row in df_corpus.iterrows():\n",
+    "        one_sentence =  []\n",
+    "        wrong = False\n",
+    "        for i in range(0, nr_of_words_per_sentence, 1): \n",
+    "            tuple = ( row['word '+str(i)], row['pos '+str(i)] )\n",
+    "            one_sentence.append( tuple )\n",
+    "            if (row['word '+str(i)] is None or row['pos '+str(i)] is None):\n",
+    "                wrong = True\n",
+    "        if wrong is False:\n",
+    "            sentences.append(one_sentence)\n",
     "\n",
     "    # Instantiate and train the tagger now\n",
-    "\ttagger = PerceptronTagger(load=False)\n",
-    "\ttagger.train(sentences)\n",
-    "\t\n",
-    "\treturn tagger"
+    "    tagger = PerceptronTagger(load=False)\n",
+    "    tagger.train(sentences)\n",
+    "    \n",
+    "    return tagger"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-22T14:35:31.937772Z",
-     "start_time": "2019-01-22T14:35:31.893616Z"
+     "end_time": "2019-01-30T16:38:09.041849Z",
+     "start_time": "2019-01-30T16:38:08.710457Z"
     }
    },
    "outputs": [],
@@ -730,11 +721,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-22T15:54:30.161099Z",
-     "start_time": "2019-01-22T15:54:30.147834Z"
+     "end_time": "2019-01-30T16:38:14.059409Z",
+     "start_time": "2019-01-30T16:38:11.805253Z"
     }
    },
    "outputs": [],
@@ -946,14 +937,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 25,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-22T14:35:34.495485Z",
-     "start_time": "2019-01-22T14:35:34.474233Z"
+     "end_time": "2019-01-30T17:13:14.079058Z",
+     "start_time": "2019-01-30T17:13:14.036713Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['?lemmaId', '?lemma', '?wordformId', '?wordform', '?number', '?gender', '?subLemmata']\n",
+      "['lemmaId', 'lemma', 'wordformId', 'wordform', 'number', 'gender', 'subLemmata']\n"
+     ]
+    }
+   ],
    "source": [
     "import re\n",
     "\n",
@@ -1412,9 +1412,26 @@
     "\n",
     "def columns_from_lex_query(lex_query):\n",
     "    # Get part after select, eg: \"?x ?y ?concat('',z) as ?a\"\n",
-    "    select_string = re.search(r'select\\s+(?:distinct)*\\s*(.*)\\s*(?:where|from)', lex_query)\n",
-    "    # Delete concat() part and following AS, because it can contain a space we do not want to split on\n",
-    "    string_wh_concat = re.replace(r'concat\\(.*\\) AS', '', select_string)\n",
+    "    select_match = re.search(r'select\\s+(?:distinct)*\\s*(.*)\\s*(?:where|from)', lex_query, flags=re.IGNORECASE)\n",
+    "    if select_match:\n",
+    "        select_string = select_match.group(1)\n",
+    "        #Delete concat() part and following AS, because it can contain a space we do not want to split on\n",
+    "        string_wh_concat = re.sub(r'concat\\(.*\\) AS', '', select_string, flags=re.IGNORECASE)\n",
+    "        split_string = string_wh_concat.split()\n",
+    "        for i,elem in enumerate(split_string):\n",
+    "            if elem.lower()==\"AS\":\n",
+    "                # Remove AS and element before AS\n",
+    "                split_string.pop(i)\n",
+    "                split_string.pop(i-1)\n",
+    "                # Assume only one AS, so we escape loop\n",
+    "                break\n",
+    "        columns = [c.lstrip(\"?\") for c in split_string]\n",
+    "    else:\n",
+    "        raise ValueError(\"No columns find in lexicon query.\")\n",
+    "    return columns\n",
+    "\n",
+    "q = lexicon_query(word=\"boek\", pos=None, lexicon=\"celex\")\n",
+    "print(columns_from_lex_query(q))\n",
     "    "
    ]
   },
@@ -14043,7 +14060,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.6.7"
   }
  },
  "nbformat": 4,
