made start on getting list of availalbe metadata fields for all resources

--- a/Chaining search.ipynb
+++ b/Chaining search.ipynb
@@ -163,14 +163,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-02-05T17:01:24.430299Z",
-     "start_time": "2019-02-05T17:01:23.910678Z"
+     "end_time": "2019-02-05T17:32:08.908416Z",
+     "start_time": "2019-02-05T17:32:08.853268Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-4-300ec8b61bf9>, line 559)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-4-300ec8b61bf9>\"\u001b[0;36m, line \u001b[0;32m559\u001b[0m\n\u001b[0;31m    def corpus_metadata_blacklab(corpus_name)\u001b[0m\n\u001b[0m                                             ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
     "import requests\n",
     "from collections import defaultdict\n",
@@ -182,7 +191,11 @@
     "import itertools # for frequency list function and from_iterable\n",
     "import numpy     # idem\n",
     "from IPython.display import FileLink, FileLinks\n",
-    "AVAILABLE_CORPORA = ['chn', 'opensonar', 'zeebrieven', 'gysseling', 'nederlab']\n",
+    "AVAILABLE_CORPORA = {'chn':'http://svprmc05.inl.nl/blacklab-server/',\n",
+    "                     'opensonar':'http://172.16.10.93:8080/blacklab-server/',\n",
+    "                     'zeebrieven':'http://svprmc20.ivdnt.org/blacklab-server/',\n",
+    "                     'gysseling':'http://svprmc20.ivdnt.org/blacklab-server/',\n",
+    "                     'nederlab':''}\n",
     "RECORDS_PER_PAGE = 1000\n",
     "\n",
     "# Fields parsed by default from corpus xml by _parse_xml\n",
@@ -726,9 +739,42 @@
     "    \n",
     "    return df_rankdiffs\n",
     "\n",
-    "query = r'[lemma=\"boek\"]'\n",
-    "df = search_corpus(query, \"chn\", detailed_context=False, extra_fields_token=[], extra_fields_doc=[\"title\",\"witnessYear_from\"])\n",
-    "display_df(df)"
+    "def corpus_metadata_blacklab(corpus_name):\n",
+    "'''\n",
+    "    Return all possible metadata fields for a BlackLab-based corpus, by sending a request to the corpus\n",
+    "    \n",
+    "    Args:\n",
+    "        corpus_name: Name of the corpus\n",
+    "    Returns:\n",
+    "        A list of metadata fields\n",
+    "    '''\n",
+    "    if corpus_name in AVAILABLE_CORPORA and corpus_name != \"nederlab\":\n",
+    "        pass\n",
+    "        # TODO implement\n",
+    "    elif corpus_name==\"nederlab\":\n",
+    "        print(\"Corpus metadata not yet available for Nederlab\")\n",
+    "        return []\n",
+    "    else:\n",
+    "        ValueError(\"Unknown corpus: \" + corpus_name + \". Should be one of \" + AVAILABLE_CORPORA.keys())\n",
+    "    return None\n",
+    "\n",
+    "def get_available_metadata(resource_type, resource_name):\n",
+    "    '''\n",
+    "    Return all possible metadata fields for a lexicon or corpus\n",
+    "    \n",
+    "    Args:\n",
+    "        resource_type: One of 'lexicon' or 'corpus'\n",
+    "        resource_name: Name of the lexicon or corpus\n",
+    "    Returns:\n",
+    "        A list of metadata fields\n",
+    "    '''\n",
+    "    if resource_type==\"lexicon\":\n",
+    "        # Create sample query for this lexicon\n",
+    "        q = lexicon_query(word=\"\", pos=\"\", lexicon=resource_name)\n",
+    "        return metadata_from_lexicon_query(q)\n",
+    "    elif resource_type==\"corpus\":\n",
+    "    else:\n",
+    "        raise ValueError(\"resource_type should be 'corpus' or 'lexicon'.\")"
    ]
   },
   {
@@ -954,14 +1000,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-02-04T17:27:48.737012Z",
-     "start_time": "2019-02-04T17:27:48.065Z"
+     "end_time": "2019-02-05T17:18:20.901603Z",
+     "start_time": "2019-02-05T17:18:20.848373Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['n_entry',\n",
+       " 'n_form',\n",
+       " 'n_ontolex_writtenRep',\n",
+       " 'n_syndef',\n",
+       " 'n_sensedef',\n",
+       " 'n_sensedef_definitionText',\n",
+       " 'n_syndef_definitionText',\n",
+       " 'n_sense',\n",
+       " 'inputMode',\n",
+       " 'wy_f_show',\n",
+       " 'wy_t_show']"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import re\n",
     "\n",
@@ -1418,7 +1485,15 @@
     "    #print(query)\n",
     "    return query\n",
     "\n",
-    "def columns_from_lex_query(lex_query):\n",
+    "def metadata_from_lexicon_query(lex_query):\n",
+    "    '''\n",
+    "    Extract metadata fields from a lexicon query string\n",
+    "    \n",
+    "    Args:\n",
+    "        lex_query: A query string issued to a lexicon, can be constructed using lexicon_query()\n",
+    "    Returns:\n",
+    "        A list of metadata fields\n",
+    "    '''\n",
     "    # Get part after select, eg: \"?x ?y ?concat('',z) as ?a\"\n",
     "    select_match = re.search(r'select\\s+(?:distinct)*\\s*(.*)\\s*(?:where|from)', lex_query, flags=re.IGNORECASE)\n",
     "    if select_match:\n",
@@ -1436,11 +1511,7 @@
     "        columns = [c.lstrip(\"?\") for c in split_string]\n",
     "    else:\n",
     "        raise ValueError(\"No columns find in lexicon query.\")\n",
-    "    return columns\n",
-    "\n",
-    "q = lexicon_query(word=\"boek\", pos=\"ADJ\", lexicon=\"diamant\")\n",
-    "print(columns_from_lex_query(q))\n",
-    "    "
+    "    return columns\n"
    ]
   },
   {
