Now possible to ask corpus metadata

--- a/Chaining search.ipynb
+++ b/Chaining search.ipynb
@@ -23,11 +23,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-02-04T17:28:11.216529Z",
-     "start_time": "2019-02-04T17:28:11.194809Z"
+     "end_time": "2019-02-08T14:23:23.808462Z",
+     "start_time": "2019-02-08T14:23:23.521657Z"
     }
    },
    "outputs": [],
@@ -163,20 +163,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-02-05T17:32:08.908416Z",
-     "start_time": "2019-02-05T17:32:08.853268Z"
+     "end_time": "2019-02-08T14:51:25.449882Z",
+     "start_time": "2019-02-08T14:51:25.376437Z"
     }
    },
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-4-300ec8b61bf9>, line 559)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-4-300ec8b61bf9>\"\u001b[0;36m, line \u001b[0;32m559\u001b[0m\n\u001b[0;31m    def corpus_metadata_blacklab(corpus_name)\u001b[0m\n\u001b[0m                                             ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['author', 'fromInputFile', 'idno', 'source', 'title', 'yearFrom', 'yearTo']\n",
+      "['word', 'lemma', 'pos', 'type', 'punct', 'starttag']\n"
      ]
     }
    ],
@@ -191,10 +191,10 @@
     "import itertools # for frequency list function and from_iterable\n",
     "import numpy     # idem\n",
     "from IPython.display import FileLink, FileLinks\n",
-    "AVAILABLE_CORPORA = {'chn':'http://svprmc05.inl.nl/blacklab-server/',\n",
-    "                     'opensonar':'http://172.16.10.93:8080/blacklab-server/',\n",
-    "                     'zeebrieven':'http://svprmc20.ivdnt.org/blacklab-server/',\n",
-    "                     'gysseling':'http://svprmc20.ivdnt.org/blacklab-server/',\n",
+    "AVAILABLE_CORPORA = {'chn':'http://svprmc05.inl.nl/blacklab-server/chn',\n",
+    "                     'opensonar':'http://172.16.10.93:8080/blacklab-server/opensonar',\n",
+    "                     'zeebrieven':'http://svprmc20.ivdnt.org/blacklab-server/zeebrieven',\n",
+    "                     'gysseling':'http://svprmc20.ivdnt.org/blacklab-server/gysseling',\n",
     "                     'nederlab':''}\n",
     "RECORDS_PER_PAGE = 1000\n",
     "\n",
@@ -739,24 +739,37 @@
     "    \n",
     "    return df_rankdiffs\n",
     "\n",
-    "def corpus_metadata_blacklab(corpus_name):\n",
-    "'''\n",
+    "\n",
+    "# TODO: Method misses token fields which are extracted from POS tag by FCS (eg. inflection)\n",
+    "def _parse_blacklab_metadata(text):\n",
+    "    '''\n",
+    "    This method parses metadata fields from a Blacklab metadata response\n",
+    "    Args:\n",
+    "        text: the XML response of a lexicon/corpus search, as a string\n",
+    "    Returns:\n",
+    "        A dictionary of with lists of document and token metadata\n",
+    "    '''\n",
+    "    \n",
+    "    # TODO: should we secure against untrusted XML?\n",
+    "    root = ET.fromstring(text)\n",
+    "    doc_fields = [md.get(\"name\") for md in root.iter(\"metadataField\")]\n",
+    "    token_fields = [prop.get(\"name\") for prop in root.iter(\"property\")]\n",
+    "    return {\"document\": doc_fields, \"token\": token_fields}\n",
+    "    \n",
+    "\n",
+    "def _corpus_metadata_blacklab(corpus_name):\n",
+    "    '''\n",
     "    Return all possible metadata fields for a BlackLab-based corpus, by sending a request to the corpus\n",
     "    \n",
     "    Args:\n",
     "        corpus_name: Name of the corpus\n",
     "    Returns:\n",
-    "        A list of metadata fields\n",
+    "        A dictionary of with lists of document and token metadata\n",
     "    '''\n",
-    "    if corpus_name in AVAILABLE_CORPORA and corpus_name != \"nederlab\":\n",
-    "        pass\n",
-    "        # TODO implement\n",
-    "    elif corpus_name==\"nederlab\":\n",
-    "        print(\"Corpus metadata not yet available for Nederlab\")\n",
-    "        return []\n",
-    "    else:\n",
-    "        ValueError(\"Unknown corpus: \" + corpus_name + \". Should be one of \" + AVAILABLE_CORPORA.keys())\n",
-    "    return None\n",
+    "    corpus_url = AVAILABLE_CORPORA[corpus_name]\n",
+    "    response = requests.get(corpus_url)\n",
+    "    response_text = response.text  \n",
+    "    return _parse_blacklab_metadata(response_text)\n",
     "\n",
     "def get_available_metadata(resource_type, resource_name):\n",
     "    '''\n",
@@ -771,10 +784,19 @@
     "    if resource_type==\"lexicon\":\n",
     "        # Create sample query for this lexicon\n",
     "        q = lexicon_query(word=\"\", pos=\"\", lexicon=resource_name)\n",
-    "        return metadata_from_lexicon_query(q)\n",
+    "        return _etadata_from_lexicon_query(q)\n",
     "    elif resource_type==\"corpus\":\n",
+    "        if resource_name in AVAILABLE_CORPORA and resource_name != \"nederlab\":\n",
+    "            return _corpus_metadata_blacklab(resource_name)\n",
+    "        elif corpus_name==\"nederlab\":\n",
+    "            print(\"Corpus metadata not yet available for Nederlab\")\n",
+    "            return []\n",
+    "        else:\n",
+    "            ValueError(\"Unknown corpus: \" + corpus_name + \". Should be one of \" + AVAILABLE_CORPORA.keys())\n",
     "    else:\n",
-    "        raise ValueError(\"resource_type should be 'corpus' or 'lexicon'.\")"
+    "        raise ValueError(\"resource_type should be 'corpus' or 'lexicon'.\")\n",
+    "\n",
+    "_corpus_metadata_blacklab(\"gysseling\")"
    ]
   },
   {
@@ -786,11 +808,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-02-05T11:52:05.250733Z",
-     "start_time": "2019-02-05T11:52:05.028724Z"
+     "end_time": "2019-02-07T15:51:27.900624Z",
+     "start_time": "2019-02-07T15:51:27.871777Z"
     }
    },
    "outputs": [],
@@ -823,7 +845,7 @@
     "    # Create UI elements\n",
     "    corpusQueryField = widgets.Text(description=\"<b>CQL query:</b>\", value=DEFAULT_QUERY)\n",
     "    corpusField = widgets.Dropdown(\n",
-    "        options=AVAILABLE_CORPORA,\n",
+    "        options=AVAILABLE_CORPORA.keys(),\n",
     "        value=DEFAULT_CORPUS,\n",
     "        description='<b>Corpus:</b>',\n",
     "    )\n",
@@ -1000,35 +1022,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 18,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-02-05T17:18:20.901603Z",
-     "start_time": "2019-02-05T17:18:20.848373Z"
+     "end_time": "2019-02-07T15:51:28.667365Z",
+     "start_time": "2019-02-07T15:51:28.633543Z"
     }
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['n_entry',\n",
-       " 'n_form',\n",
-       " 'n_ontolex_writtenRep',\n",
-       " 'n_syndef',\n",
-       " 'n_sensedef',\n",
-       " 'n_sensedef_definitionText',\n",
-       " 'n_syndef_definitionText',\n",
-       " 'n_sense',\n",
-       " 'inputMode',\n",
-       " 'wy_f_show',\n",
-       " 'wy_t_show']"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "import re\n",
     "\n",
@@ -1485,7 +1486,7 @@
     "    #print(query)\n",
     "    return query\n",
     "\n",
-    "def metadata_from_lexicon_query(lex_query):\n",
+    "def _metadata_from_lexicon_query(lex_query):\n",
     "    '''\n",
     "    Extract metadata fields from a lexicon query string\n",
     "    \n",
@@ -1530,14 +1531,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-02-04T17:27:48.737797Z",
-     "start_time": "2019-02-04T17:27:48.070Z"
+     "end_time": "2019-02-07T15:51:29.957256Z",
+     "start_time": "2019-02-07T15:51:29.939067Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "cc2c3342271442f8a772f17dd26740c4",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "VBox(children=(Text(value='[lemma=\"boek\" & pos=\"verb\"]', description='<b>CQL query:</b>'), Dropdown(descriptio…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "#from chaininglib import ui\n",
     "\n",
@@ -1554,15 +1570,184 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-02-04T17:27:48.738716Z",
-     "start_time": "2019-02-04T17:27:48.075Z"
+     "end_time": "2019-02-07T15:51:31.580633Z",
+     "start_time": "2019-02-07T15:51:31.400999Z"
     },
     "scrolled": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<b>Results:</b>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>left context</th>\n",
+       "      <th>lemma 0</th>\n",
+       "      <th>universal_dependency 0</th>\n",
+       "      <th>word 0</th>\n",
+       "      <th>right context</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>of Imam Zij staat te</td>\n",
+       "      <td>boek</td>\n",
+       "      <td>VERB</td>\n",
+       "      <td>boek</td>\n",
+       "      <td>als het eerste zwarte topmodel</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Rihanna 4 Ze staat te</td>\n",
+       "      <td>boek</td>\n",
+       "      <td>VERB</td>\n",
+       "      <td>boek</td>\n",
+       "      <td>als het eerste zwarte model</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>te pakken Gilaard staat te</td>\n",
+       "      <td>boek</td>\n",
+       "      <td>VERB</td>\n",
+       "      <td>boek</td>\n",
+       "      <td>als een goed militair maar</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>verklaard Scotto d'Abusco staat te</td>\n",
+       "      <td>boek</td>\n",
+       "      <td>VERB</td>\n",
+       "      <td>boek</td>\n",
+       "      <td>als een beloftevolle Italiaan van</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>als La Gioconda staat te</td>\n",
+       "      <td>boek</td>\n",
+       "      <td>VERB</td>\n",
+       "      <td>boek</td>\n",
+       "      <td>als het portret van de</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>dat niet Beatrix staat te</td>\n",
+       "      <td>boek</td>\n",
+       "      <td>VERB</td>\n",
+       "      <td>boek</td>\n",
+       "      <td>als een eigengereide koppige koningin</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>realpolitische belegging staat vandaag te</td>\n",
+       "      <td>boek</td>\n",
+       "      <td>VERB</td>\n",
+       "      <td>boek</td>\n",
+       "      <td>als een van hun grootste</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>en biograaf Bastet staat te</td>\n",
+       "      <td>boek</td>\n",
+       "      <td>VERB</td>\n",
+       "      <td>boek</td>\n",
+       "      <td>als een groot kenner van</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>Il Magnifico 1449-1492 staat te</td>\n",
+       "      <td>boek</td>\n",
+       "      <td>VERB</td>\n",
+       "      <td>boek</td>\n",
+       "      <td>als een van de grootste</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>zou zijn Danneels staat te</td>\n",
+       "      <td>boek</td>\n",
+       "      <td>VERB</td>\n",
+       "      <td>boek</td>\n",
+       "      <td>als een van de intelligentere</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                 left context lemma 0 universal_dependency 0  \\\n",
+       "0                       of Imam Zij staat te     boek                   VERB   \n",
+       "1                      Rihanna 4 Ze staat te     boek                   VERB   \n",
+       "2                 te pakken Gilaard staat te     boek                   VERB   \n",
+       "3         verklaard Scotto d'Abusco staat te     boek                   VERB   \n",
+       "4                   als La Gioconda staat te     boek                   VERB   \n",
+       "5                  dat niet Beatrix staat te     boek                   VERB   \n",
+       "6  realpolitische belegging staat vandaag te     boek                   VERB   \n",
+       "7                en biograaf Bastet staat te     boek                   VERB   \n",
+       "8            Il Magnifico 1449-1492 staat te     boek                   VERB   \n",
+       "9                 zou zijn Danneels staat te     boek                   VERB   \n",
+       "\n",
+       "  word 0                           right context  \n",
+       "0   boek          als het eerste zwarte topmodel  \n",
+       "1   boek             als het eerste zwarte model  \n",
+       "2   boek              als een goed militair maar  \n",
+       "3   boek       als een beloftevolle Italiaan van  \n",
+       "4   boek                  als het portret van de  \n",
+       "5   boek   als een eigengereide koppige koningin  \n",
+       "6   boek                als een van hun grootste  \n",
+       "7   boek                als een groot kenner van  \n",
+       "8   boek                 als een van de grootste  \n",
+       "9   boek           als een van de intelligentere  "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "5acc84e4138a484aba66bdd66112c76c",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(Label(value='Sla uw resultaten op:'), Text(value='mijn_resultaten.csv'), Button(button_style='w…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "#from chaininglib import search\n",
     "query= corpusQueryField.value\n",
